resolve versions between computers